Adds solution to assignment-7

--- a/money.html
+++ b/money.html
@@ -22,143 +22,213 @@
 <div class="container mt-3">
   <h1>Find the coins by Sahil Grewal</h1>
   <p>Click on the locations to find coins, beware the monster</p>
-  <p id="locations">Number of locations checked is zero.</p>
+  <p id="location">Number of locations checked is zero.</p>
   <p id="score">Score is zero.</p>
-  <p>Click for help.</p>
-  <p id="help">Help report</p>
+  <p id="help" onclick="help()">Click for help.</p>
+  <p>Help report</p>
 </div>
 
 <div class="container mt-3">
     <!-- Row 1 -->
     <div class="row">
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img0" onclick="check(0)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img1" onclick="check(1)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img2" onclick="check(2)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img3" onclick="check(3)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img4" onclick="check(4)" alt="BuildingImage" >
       </div>
     </div>
     <!-- Row 2 -->
     <div class="row">
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img5" onclick="check(5)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img6" onclick="check(6)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img7" onclick="check(7)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img8" onclick="check(8)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img9" onclick="check(9)" alt="BuildingImage" >
       </div>
     </div>
     <!-- Row 3 -->
     <div class="row">
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img10" onclick="check(10)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img11" onclick="check(11)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img12" onclick="check(12)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img13" onclick="check(13)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img14" onclick="check(14)" alt="BuildingImage" >
       </div>
     </div>
     <!-- Row 4 -->
     <div class="row">
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img15" onclick="check(15)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img16" onclick="check(16)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img17" onclick="check(17)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img18" onclick="check(18)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img19" onclick="check(19)"  alt="BuildingImage" >
       </div>
     </div>
     <!-- Row 5 -->
     <div class="row">
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img20" onclick="check(20)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img21" onclick="check(21)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img22" onclick="check(22)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img23" onclick="check(23)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img24" onclick="check(24)" alt="BuildingImage" >
       </div>
     </div>
     <!-- Row 6 -->
     <div class="row">
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img25" onclick="check(25)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img26" onclick="check(26)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img27" onclick="check(27)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img28" onclick="check(28)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img29" onclick="check(29)" alt="BuildingImage" >
       </div>
     </div>
     <!-- Row 7 -->
     <div class="row">
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img30" onclick="check(30)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img31" onclick="check(31)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img32" onclick="check(32)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg"  id="Img33" onclick="check(33)" alt="BuildingImage" >
       </div>
       <div class="col location">
-        <img src="Images/BuildingImage.jpg" alt="BuildingImage" >
+        <img src="Images/BuildingImage.jpg" id="Img34" onclick="check(34)" alt="BuildingImage" >
       </div>
     </div>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
   integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
   integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script>
+    const ids = [
+      "Img0", "Img1", "Img2", "Img3", "Img4", "Img5", "Img6", "Img7", "Img8",
+      "Img9", "Img10", "Img11", "Img12", "Img13", "Img14", "Img15", "Img16", "Img17",
+      "Img18", "Img19", "Img20", "Img21", "Img22", "Img23", "Img24", "Img25", "Img26",
+      "Img27", "Img28", "Img29", "Img30", "Img31", "Img32", "Img33", "Img34"
+    ];
+    let score = 0;
+    let locations = 0;
+    let lastLocation = 0;
+    const fancyCoinLocations = [2, 5, 14, 19, 23, 33];
+    let monsterLocation = 20;
+    let gameOver = false;
+
+    function check(pos) {
+      if (gameOver == true) {
+        return;
+      }
+      let curr_id = ids[pos];
+      id = curr_id;
+      image = document.getElementById(id);
+      if (fancyCoinLocations.includes(pos)) {
+        image.src = "Images/fancierCoin.jpg";
+        score = score + 3;
+      }
+      else if (pos == monsterLocation) {
+        image.src = "Images/Monster.jpg"
+        score = score - 5;
+        gameOver = true;
+      }
+      else {
+        image.src = "Images/coinImage.jpg"
+        score = score + 1;
+      }
+      locations++;
+      lastLocation = pos;
+
+      location_text = document.getElementById("location");
+      location_text.innerHTML = locations;
+
+      score_curr = document.getElementById("score");
+      score_curr.innerHTML = score;
+    }
+
+    function help() {
+      console.log("In the help");
+      help_mssg = document.getElementById("help");
+      let mssg = ["So close", "Grrr", "All clear"];
+      let col = location % 5;
+      let row = location / 5;
+      const kinship_locations = [lastLocation + 1, lastLocation - 1, lastLocation + 5, lastLocation - 5];
+      const grr_locations = [monsterLocation + 1, monsterLocation - 5, monsterLocation + 5];
+      let found = false;
+          kinship_locations.forEach(element => {
+              if (fancyCoinLocations.includes(element)) {
+                  found = true;
+              }
+      });
+      if (found == true) {
+        help_mssg.innerHTML = mssg[0];
+      }
+      else if (grr_locations.includes(lastLocation) == true) {
+        help_mssg.innerHTML = mssg[1];
+      }
+      else {
+        help_mssg.innerHTML = mssg[2];
+      }
+    }
+  </script>
 </body>
 </html>
